--- a/client/package.json
+++ b/client/package.json
@@ -14,8 +14,11 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-icons": "^3.8.0",
+    "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.3.0"
+    "react-scripts": "3.3.0",
+    "redux": "^4.0.5",
+    "redux-saga": "^1.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
