--- a/client/package.json
+++ b/client/package.json
@@ -7,7 +7,6 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.1",
-    "classnames": "^2.2.6",
     "http-proxy-middleware": "^0.20.0",
     "node-sass": "^4.13.0",
     "prop-types": "^15.7.2",
@@ -39,7 +38,8 @@
     "development": [
       "last 1 chrome version",
       "last 1 firefox version",
-      "last 1 safari version"
+      "last 1 safari version",
+      "ie 11"
     ]
   }
 }
