--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -1,20 +1,31 @@
 {
   "env": {
     "browser": true,
-    "es6": true
+    // "commonjs": true,
+    // "es6": true,
+    "node": true
   },
-  "extends": ["plugin:react/recommended", "plugin:prettier/recommended"],
-  "globals": {
-    "Atomics": "readonly",
-    "SharedArrayBuffer": "readonly"
-  },
-  "parserOptions": {
-    "ecmaFeatures": {
-      "jsx": true
-    },
-    "ecmaVersion": 2018,
-    "sourceType": "module"
-  },
-  "plugins": ["react"],
-  "rules": {}
+  //   "extends": "eslint:recommended",
+  "extends": ["airbnb", "prettier"],
+  "plugins": ["prettier"],
+  //   "globals": {
+  //     "Atomics": "readonly",
+  //     "SharedArrayBuffer": "readonly"
+  //   },
+  //   "parserOptions": {
+  //     "ecmaVersion": 2018
+  //   },
+  "rules": {
+    "import/no-unresolved": "off",
+    "no-console": "off",
+    "react/prop-types": "off",
+    "react-hooks/exhaustive-deps": "off",
+    "react/no-array-index-key": "off",
+    "jsx-a11y/click-events-have-key-events": "off",
+    "jsx-a11y/no-noninteractive-element-interactions": "off",
+    "jsx-a11y/no-static-element-interactions": "off",
+    "react/jsx-curly-newline": "off",
+    "react/no-unescaped-entities": "off",
+    "import/prefer-default-export": "off"
+  }
 }
