--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -17,15 +17,16 @@
   //   },
   "rules": {
     "import/no-unresolved": "off",
+    "import/prefer-default-export": "off",
     "no-console": "off",
+    "no-unused-expressions": "off",
     "react/prop-types": "off",
-    "react-hooks/exhaustive-deps": "off",
     "react/no-array-index-key": "off",
-    "jsx-a11y/click-events-have-key-events": "off",
-    "jsx-a11y/no-noninteractive-element-interactions": "off",
-    "jsx-a11y/no-static-element-interactions": "off",
     "react/jsx-curly-newline": "off",
     "react/no-unescaped-entities": "off",
-    "import/prefer-default-export": "off"
+    "jsx-a11y/anchor-is-valid": "off",
+    "jsx-a11y/click-events-have-key-events": "off",
+    "jsx-a11y/no-noninteractive-element-interactions": "off",
+    "jsx-a11y/no-static-element-interactions": "off"
   }
 }
