--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -1,12 +1,12 @@
 {
   "env": {
-    "browser": true,
+    "browser": true
     // "commonjs": true,
     // "es6": true,
-    "node": true
+    // "node": true
   },
   //   "extends": "eslint:recommended",
-  "extends": ["airbnb", "prettier"],
+  "extends": ["airbnb", "airbnb/hooks", "prettier"],
   "plugins": ["prettier"],
   //   "globals": {
   //     "Atomics": "readonly",
