--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "mongodb": "^3.5.3",
     "mongoose": "^5.9.1",
     "mongoose-auto-increment": "^5.0.1",
-    "nodemon": "^2.0.2"
+    "nodemon": "^2.0.2",
+    "npm-check-updates": "^4.0.3"
   }
 }
