--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -23,6 +23,7 @@
     "react/no-array-index-key": "off",
     "react/jsx-curly-newline": "off",
     "react/no-unescaped-entities": "off",
+    "react/button-has-type": "off",
     "jsx-a11y/anchor-is-valid": "off",
     "jsx-a11y/click-events-have-key-events": "off",
     "jsx-a11y/no-noninteractive-element-interactions": "off",
