--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -21,8 +21,9 @@
     "no-unused-expressions": "off",
     "react/prop-types": "off",
     "react/no-array-index-key": "off",
-    "react/jsx-curly-newline": "off",
     "react/no-unescaped-entities": "off",
+    "react/jsx-curly-newline": "off",
+    "react/jsx-props-no-spreading": "off",
     "react/button-has-type": "off",
     "jsx-a11y/anchor-is-valid": "off",
     "jsx-a11y/click-events-have-key-events": "off",
