--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "http-proxy-middleware": "^1.0.2",
     "node-sass": "^4.13.1",
     "react": "^16.13.0",
+    "react-beautiful-dnd": "^13.0.0",
     "react-dom": "^16.13.0",
     "react-icons": "^3.9.0",
     "react-redux": "^7.2.0",
