--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "axios": "^0.19.2",
     "http-proxy-middleware": "^1.0.2",
+    "immer": "^6.0.2",
     "node-sass": "^4.13.1",
     "react": "^16.13.0",
     "react-beautiful-dnd": "^13.0.0",
