--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -1,19 +1,13 @@
 {
   "env": {
     "browser": true
-    // "commonjs": true,
-    // "es6": true,
-    // "node": true
+  },
+  "globals": {
+    "Atomics": false,
+    "SharedArrayBuffer": false
   },
   "extends": ["airbnb", "airbnb/hooks", "prettier"],
   "plugins": ["prettier"],
-  //   "globals": {
-  //     "Atomics": "readonly",
-  //     "SharedArrayBuffer": "readonly"
-  //   },
-  //   "parserOptions": {
-  //     "ecmaVersion": 2018
-  //   },
   "rules": {
     "import/no-unresolved": "off",
     "import/prefer-default-export": "off",
