--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app.js "
+    "start": "app.js "
   },
   "author": "",
   "license": "ISC",
@@ -17,7 +17,6 @@
     "express-validator": "^6.4.0",
     "install": "^0.13.0",
     "jsonwebtoken": "^8.5.1",
-    "nodemon": "^2.0.3",
     "npm": "^6.14.8",
     "pg": "^8.5.1"
   }
